--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -20,33 +20,51 @@ under the License.
 ////////////////////////////////////////////////////////////////////////////////
 // Use these settings to help adjust the appearance of Slate
 
+// DRACULA THEME
+$drac-bg: #282a36;
+$drac-dark-bg: #191C2B;
+$drac-light-bg: #44475a;
+$drac-white: #FBFCFB;
+$drac-comment: #6272a4;
+$drac-cyan: #8be9fd;
+$drac-green: #50fa7b;
+$drac-orange: #ffb86c;
+$drac-pink: #ff79c6;
+$drac-purple: #bd93f9;
+$drac-red: #ff5555;
+$drac-yellow: #f1fa8c;
+
+
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #2E3336 !default;
-$examples-bg: #2E3336 !default;
-$code-bg: #1E2224 !default;
-$code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #1E2224 !default;
-$nav-active-bg: #0F75D4 !default;
-$nav-active-parent-bg: #1E2224 !default; // parent links of the current section
+$nav-bg: $drac-white !default;
+$examples-bg: $drac-bg !default;
+$code-bg: $drac-bg !default;
+$code-annotation-bg: #44475a !default;
+$nav-subitem-bg: $drac-white !default;
+$nav-active-bg: #FFF !default;
+$nav-active-parent-bg: #FFF !default; // parent links of the current section
 $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
-$main-bg: #F3F7F9 !default;
-$aside-notice-bg: #8fbcd4 !default;
-$aside-warning-bg: #c97a7e !default;
-$aside-success-bg: #6ac174 !default;
-$search-notice-bg: #c97a7e !default;
+$main-bg: #FFF !default;
+$aside-notice-bg: #E7EEFE !default;
+$aside-notice-text: #1457F9 !default;
+$aside-warning-bg: #FFEAED !default;
+$aside-warning-text: #C78925 !default;
+$aside-success-bg: #EAF4EF !default;
+$aside-success-text: #448A6B !default;
+$search-notice-bg: #FFEAED !default;
 
 
 // TEXT COLORS
 ////////////////////
-$main-text: #333 !default; // main content text color
-$nav-text: #fff !default;
-$nav-active-text: #fff !default;
-$nav-active-parent-text: #fff !default; // parent links of the current section
+$main-text: $drac-bg !default; // main content text color
+$nav-text: $drac-bg !default;
+$nav-active-text: $drac-bg !default;
+$nav-active-parent-text: $drac-bg !default; // parent links of the current section
 $lang-select-text: #fff !default; // color of unselected language tab text
 $lang-select-active-text: #fff !default; // color of selected language tab text
 $lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
@@ -54,7 +72,7 @@ $lang-select-pressed-text: #fff !default; // color of language tab text when mou
 
 // SIZES
 ////////////////////
-$nav-width: 230px !default; // width of the navbar
+$nav-width: 260px !default; // width of the navbar
 $examples-width: 50% !default; // portion of the screen taken up by code examples
 $logo-margin: 0px !default; // margin below logo
 $main-padding: 28px !default; // padding to left and right of content & examples
@@ -69,19 +87,22 @@ $phone-width: $tablet-width - $nav-width !default; // min width before reverting
 
 // FONTS
 ////////////////////
+@import url("//fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("//fonts.googleapis.com/css?family=Raleway:300,500,700");
+
 %default-font {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 
 %header-font {
-  @extend %default-font;
-  font-weight: bold;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
 }
 
 %code-font {
   font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.5;
 }
 
